--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
+git:
+  depth: false
+  
 language: python
 
 python : 
   - "3.7"
 
 services:
-  -  docker  
+  - docker  
 
 before_script: pip install docker-compose
 
