--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,21 @@ services:
         volumes: 
             - ./app:/app
         command: 
-            sh -C "python manage.py runserver 0.0.0.0:8000"        
+            sh -C "python manage.py runserver 0.0.0.0:8000"     
+        environment: 
+            - DB_HOST=db
+            - DB_NAME=app
+            - DB_USER=postgress
+            - DB_PASS=supersecretpassword
+            
+        depends_on: 
+            - db
+    db:
+        image: postgres:10-alpine
+        environment: 
+            - POSTGRESS_DB=app
+            - POSTGRESS_USER=postgress
+            - POSTGRESS_PASSWORD=supersecretpassword          
+            
+
 
